#+
#§  \file       performance/Makefile.am
#§  \brief      \$Id$
#§  
#§  (C) 2007 - NHI - #1 - Project - Group
#§  
#§  \version    \$Rev$
#§  \author     EMail: aotto1968 at users.berlios.de
#§  \attention  this software has GPL permissions to copy
#§              please contact AUTHORS for additional information
#§

EXTRA_DIST = build_performance_env.sh  performance.sh \
	      performance_nothread.env performance_thread.env \
		README

