#+
#:  \file       tests/Makefile.am
#:  \brief      \$Id$
#:  
#:  (C) 2007 - NHI - #1 - Project - Group
#:  
#:  \version    \$Rev$
#:  \author     EMail: aotto1968 at users.berlios.de
#:  \attention  this software has GPL permissions to copy
#:              please contact AUTHORS for additional information
#:

EXTRA_DIST = $(srcdir)/*.test $(srcdir)/*.tcl

TESTS_ENVIRONMENT = $(abs_top_srcdir)/bin/Nhi1Test

TESTS = $(abs_top_srcdir)/theLink/tests/all.tcl

