#+
#:  \file       theBrain/Makefile.am
#:  \brief      \$Id$
#:  
#:  (C) 2007 - NHI - #1 - Project - Group
#:  
#:  \version    \$Rev$
#:  \author     EMail: aotto1968 at users.berlios.de
#:  \attention  this software has GPL permissions to copy
#:              please contact AUTHORS for additional information
#:

SUBDIRS = libbrain abrain

if USE_CXX
SUBDIRS += atrans
endif

if USE_TCL
SUBDIRS += tests
endif

