#+
#§  \file       libmsgque/Makefile.am
#§  \brief      \$Id: Makefile.am 507 2009-11-28 15:18:46Z dev1usr $
#§  
#§  (C) 2007 - NHI - #1 - Project - Group
#§  
#§  \version    \$Rev: 507 $
#§  \author     EMail: aotto1968 at users.sourceforge.net
#§  \attention  this software has GPL permissions to copy
#§              please contact AUTHORS for additional information
#§

SUBDIRS = libmsgque
if USE_CXX
SUBDIRS += ccmsgque
endif
if USE_JAVA
SUBDIRS += javamsgque
endif
if USE_PYTHON
SUBDIRS += pymsgque
endif
if USE_CSHARP
SUBDIRS += csmsgque
endif
if USE_PHP
SUBDIRS += phpmsgque
endif
if USE_PERL
SUBDIRS += perlmsgque
endif
if USE_TCL
SUBDIRS += tclmsgque
endif
