#+
#§  \file       theLink/Makefile.am
#§  \brief      \$Id: Makefile.am 424 2011-01-20 16:15:21Z aotto1968 $
#§  
#§  (C) 2007 - NHI - #1 - Project - Group
#§  
#§  \version    \$Rev: 424 $
#§  \author     EMail: aotto1968 at users.berlios.de
#§  \attention  this software has GPL permissions to copy
#§              please contact AUTHORS for additional information
#§

EXTRA_DIST = .MAKE_DIST.bash
