#+
#:  \file       etc/Makefile.am
#:  \brief      \$Id: Makefile.am 607 2013-02-06 17:13:43Z aotto1968 $
#:  
#:  (C) 2007 - NHI - #1 - Project - Group
#:  
#:  \version    \$Rev: 607 $
#:  \author     EMail: aotto1968 at users.berlios.de
#:  \attention  this software has GPL permissions to copy
#:              please contact AUTHORS for additional information
#:

EXTRA_DIST = .alias .bashrc .vimrc 

