#+
#§  \file       example/python/Makefile.am
#§  \brief      \$Id: Makefile.am 507 2009-11-28 15:18:46Z dev1usr $
#§  
#§  (C) 2007 - NHI - #1 - Project - Group
#§  
#§  \version    \$Rev: 507 $
#§  \author     EMail: aotto1968 at users.sourceforge.net
#§  \attention  this software has GPL permissions to copy
#§              please contact AUTHORS for additional information
#§

##
## ==========================================================================
## Main
##

EXTRA_DIST = manfilter.py mulclient.py mulserver.py MyClient.py MyServer.py \
		testclient.py testserver.py Filter1.py Filter2.py

